--- a/index.html
+++ b/index.html
@@ -4358,7 +4358,7 @@
   },
   {
     regNo: "306",
-    name: "Munasar Xasan Maxamuud Maxamed",
+    name: "Munasar Xasan Maxamed",
     motherName: "Not Provided",
     class: "Class 7",
     year: "2025-2026",
@@ -6959,7 +6959,7 @@
   },
   {
     regNo: "461",
-    name: "Amiin Cabdi Calasow",
+    name: "Maxamed Amiin Cabdi Cali Calasow",
     motherName: "Not Provided",
     class: "Class 5aad",
     year: "2025-2026",
@@ -7452,7 +7452,7 @@
   },
   {
     regNo: "490",
-    name: "Axmed Farxaan Maxamud",
+    name: "Axmed Farxaan Maxamed",
     motherName: "Not Provided",
     class: "Class 5aad",
     year: "2025-2026",
