--- a/index.html
+++ b/index.html
@@ -2253,8 +2253,6 @@
       BUSINESS: 22
     }
   },
-
-  // Form 2
   {
     regNo: "1613882",
     name: "Abdi Cabdulahi Maxamuud Cumar",
@@ -2265,7 +2263,7 @@
       ISLAMIC: 29,
       SOOMAALI: 37,
       ARABIC: 37,
-      MATH: 0,
+      MATH: 24,
       ENGLISH: 28,
       BIOLOGY: 28,
       CHEMISTRY: 36,
@@ -2286,7 +2284,7 @@
       ISLAMIC: 10,
       SOOMAALI: 29,
       ARABIC: 22,
-      MATH: 2,
+      MATH: 14,
       ENGLISH: 18,
       BIOLOGY: 20,
       CHEMISTRY: 33,
@@ -2307,7 +2305,7 @@
       ISLAMIC: 10,
       SOOMAALI: 17,
       ARABIC: 24,
-      MATH: 34,
+      MATH: 16,
       ENGLISH: 18,
       BIOLOGY: 32,
       CHEMISTRY: 25,
@@ -2328,7 +2326,7 @@
       ISLAMIC: 30,
       SOOMAALI: 33,
       ARABIC: 25,
-      MATH: 32,
+      MATH: 24,
       ENGLISH: 22,
       BIOLOGY: 22,
       CHEMISTRY: 20,
@@ -2349,7 +2347,7 @@
       ISLAMIC: 8,
       SOOMAALI: 31,
       ARABIC: 29,
-      MATH: 2,
+      MATH: 15,
       ENGLISH: 14,
       BIOLOGY: 20,
       CHEMISTRY: 31,
@@ -2370,7 +2368,7 @@
       ISLAMIC: 7,
       SOOMAALI: 34,
       ARABIC: 25,
-      MATH: 9,
+      MATH: 37,
       ENGLISH: 32,
       BIOLOGY: 25,
       CHEMISTRY: 27,
@@ -2391,7 +2389,7 @@
       ISLAMIC: 27,
       SOOMAALI: 38,
       ARABIC: 40,
-      MATH: 5,
+      MATH: 25,
       ENGLISH: 26,
       BIOLOGY: 23,
       CHEMISTRY: 28,
@@ -2412,7 +2410,7 @@
       ISLAMIC: 33,
       SOOMAALI: 37,
       ARABIC: 40,
-      MATH: 0,
+      MATH: 10,
       ENGLISH: 27,
       BIOLOGY: 29,
       CHEMISTRY: 26,
@@ -2433,7 +2431,7 @@
       ISLAMIC: 11,
       SOOMAALI: 31,
       ARABIC: 36,
-      MATH: 6,
+      MATH: 16,
       ENGLISH: 29,
       BIOLOGY: 29,
       CHEMISTRY: 25,
@@ -2454,7 +2452,7 @@
       ISLAMIC: 37,
       SOOMAALI: 37,
       ARABIC: 39,
-      MATH: 29,
+      MATH: 21,
       ENGLISH: 15,
       BIOLOGY: 27,
       CHEMISTRY: 28,
@@ -2475,7 +2473,7 @@
       ISLAMIC: 14,
       SOOMAALI: 19,
       ARABIC: 30,
-      MATH: 28,
+      MATH: 13,
       ENGLISH: 22,
       BIOLOGY: 28,
       CHEMISTRY: 27,
@@ -2509,7 +2507,7 @@
   },
   {
     regNo: "1614171",
-    name: "Deeqo Xasan Calianis C/dule",
+    name: "Deeqo Xasan Caliaanis C/dule",
     motherName: "Madiino Maxamad Maxamuud",
     class: "Form 2",
     year: "2025-2026",
@@ -2517,7 +2515,7 @@
       ISLAMIC: 17,
       SOOMAALI: 35,
       ARABIC: 35,
-      MATH: 35,
+      MATH: 25,
       ENGLISH: 24,
       BIOLOGY: 30,
       CHEMISTRY: 30,
@@ -2559,7 +2557,7 @@
       ISLAMIC: 8,
       SOOMAALI: 36,
       ARABIC: 31,
-      MATH: 40,
+      MATH: 30,
       ENGLISH: 28,
       BIOLOGY: 5,
       CHEMISTRY: 29,
@@ -2580,7 +2578,7 @@
       ISLAMIC: 24,
       SOOMAALI: 35,
       ARABIC: 39,
-      MATH: 27,
+      MATH: 12,
       ENGLISH: 22,
       BIOLOGY: 24,
       CHEMISTRY: 24,
@@ -2622,7 +2620,7 @@
       ISLAMIC: 35,
       SOOMAALI: 37,
       ARABIC: 33,
-      MATH: 37,
+      MATH: 27,
       ENGLISH: 26,
       BIOLOGY: 39,
       CHEMISTRY: 39,
@@ -2643,7 +2641,7 @@
       ISLAMIC: 14,
       SOOMAALI: 36,
       ARABIC: 35,
-      MATH: 12,
+      MATH: 20,
       ENGLISH: 26,
       BIOLOGY: 15,
       CHEMISTRY: 26,
@@ -2664,7 +2662,7 @@
       ISLAMIC: 12,
       SOOMAALI: 36,
       ARABIC: 34,
-      MATH: 34,
+      MATH: 29,
       ENGLISH: 4,
       BIOLOGY: 28,
       CHEMISTRY: 27,
@@ -2706,7 +2704,7 @@
       ISLAMIC: 18,
       SOOMAALI: 34,
       ARABIC: 36,
-      MATH: 27,
+      MATH: 15,
       ENGLISH: 28,
       BIOLOGY: 26,
       CHEMISTRY: 27,
@@ -2727,7 +2725,7 @@
       ISLAMIC: 29,
       SOOMAALI: 35,
       ARABIC: 40,
-      MATH: 10,
+      MATH: 30,
       ENGLISH: 29,
       BIOLOGY: 29,
       CHEMISTRY: 33,
@@ -2748,7 +2746,7 @@
       ISLAMIC: 33,
       SOOMAALI: 37,
       ARABIC: 40,
-      MATH: 10,
+      MATH: 25,
       ENGLISH: 28,
       BIOLOGY: 37,
       CHEMISTRY: 32,
@@ -2769,7 +2767,7 @@
       ISLAMIC: 9,
       SOOMAALI: 33,
       ARABIC: 28,
-      MATH: 3,
+      MATH: 18,
       ENGLISH: 30,
       BIOLOGY: 21,
       CHEMISTRY: 36,
@@ -2790,7 +2788,7 @@
       ISLAMIC: 36,
       SOOMAALI: 38,
       ARABIC: 37,
-      MATH: 38,
+      MATH: 25,
       ENGLISH: 32,
       BIOLOGY: 32,
       CHEMISTRY: 33,
@@ -2811,7 +2809,7 @@
       ISLAMIC: 38,
       SOOMAALI: 39,
       ARABIC: 24,
-      MATH: 29,
+      MATH: 37,
       ENGLISH: 34,
       BIOLOGY: 40,
       CHEMISTRY: 38,
@@ -2822,8 +2820,6 @@
       BUSINESS: 37
     }
   },
-
-  // Form 1
   {
     regNo: "2870920",
     name: "Abuukar Careys Daa Ud",
@@ -2972,8 +2968,8 @@
     }
   },
   {
-    regNo: "2631803",
-    name: "Daahir Clahi Cali",
+    regNo: "2870773",
+    name: "Daahir Cabdullaahi Cali",
     motherName: "Ruqiyo Xasan Calasow",
     class: "Form 1",
     year: "2025-2026",
@@ -3490,7 +3486,7 @@
     }
   },
   {
-    regNo: "2629658",
+    regNo: "3114261",
     name: "Cabdullahi Xasan Cabdule",
     motherName: "Faadumo Xaashi Axmed",
     class: "Grade 8",
